[gd_scene load_steps=17 format=3 uid="uid://csvnxwbpljvax"]

[ext_resource type="Script" uid="uid://dg7ljbob3vk5" path="res://entity/player/player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://10np7jhfu3ao" path="res://components/Interaction Array/interact_ray.tscn" id="2_onrkg"]
[ext_resource type="Script" uid="uid://3em6wetdguq8" path="res://ui_script.gd" id="3_hqtel"]
[ext_resource type="PackedScene" uid="uid://bilhtfahidddi" path="res://components/HealthComponent/health_component.tscn" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://cstt3mgwuuain" path="res://components/CombatComponents/combat_component.gd" id="5_combat"]
[ext_resource type="Script" uid="uid://cgj3byjljqdxk" path="res://components/CombatComponents/melee_weapon_component.gd" id="6_weapon"]
[ext_resource type="Script" uid="uid://bj7v6hjyshcoe" path="res://components/CombatComponents/hitbox_component.gd" id="7_hitbox"]
[ext_resource type="Script" uid="uid://dypwmlmtrk5o2" path="res://components/CombatComponents/hurtbox_component.gd" id="8_hurtbox"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i3pqv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hitbox"]
size = Vector3(1, 1, 1.5)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_onrkg"]

[sub_resource type="Animation" id="Animation_sweqy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayWirhEffects:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hqtel"]
resource_name = "blood"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayWirhEffects:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2hs0m"]
_data = {
&"RESET": SubResource("Animation_sweqy"),
&"blood": SubResource("Animation_hqtel")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hurtbox"]

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_onrkg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_i3pqv")
skeleton = NodePath("../CollisionShape3D")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7126968, -0.2907617)

[node name="Camera3D" type="Camera3D" parent="Pivot"]

[node name="MeleeWeaponComponent" type="Node3D" parent="Pivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.3, -1)
script = ExtResource("6_weapon")

[node name="HitboxComponent" type="Area3D" parent="Pivot/Camera3D/MeleeWeaponComponent"]
collision_layer = 2
collision_mask = 4
script = ExtResource("7_hitbox")
damage = 15.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pivot/Camera3D/MeleeWeaponComponent/HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.75)
shape = SubResource("BoxShape3D_hitbox")

[node name="InteractRay" parent="Pivot" instance=ExtResource("2_onrkg")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_hqtel")

[node name="Cross" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -13.841001
anchor_top = -7.5000005
anchor_right = -13.841001
anchor_bottom = -7.5000005
offset_left = 553.64
offset_top = 300.00003
offset_right = 573.64
offset_bottom = 316.00003
texture = SubResource("PlaceholderTexture2D_onrkg")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
offset_left = -548.0
offset_top = -305.0
offset_right = -493.0
offset_bottom = -282.0
text = "dasdas"

[node name="OverlayWirhEffects" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -555.0
offset_top = -312.0
offset_right = 601.0
offset_bottom = 333.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
&"": SubResource("AnimationLibrary_2hs0m")
}

[node name="health_component" parent="." instance=ExtResource("3_i3pqv")]

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("5_combat")

[node name="HurtboxComponent" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("8_hurtbox")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtboxComponent"]
shape = SubResource("CapsuleShape3D_hurtbox")

[connection signal="health_changed" from="health_component" to="Control" method="_on_health_component_health_changed"]
